crates/mir/tests/fixtures/errors/move_view_param.fe
pub fn move_view_param(x: u256) -> u256 {
    move x
}

